# src/main/java/org/univaq/swa/template/resources/AuleRes.java
@@ -1,7 +1,3 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
- */
 package org.univaq.swa.template.resources;
 
 import jakarta.ws.rs.Consumes;
@@ -10,16 +6,25 @@ import jakarta.ws.rs.POST;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.UriInfo;
+import java.net.URI;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.sql.Statement;
+import java.sql.Timestamp;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.HashMap;
 import javax.naming.InitialContext;
 import javax.naming.NamingException;
 import javax.sql.DataSource;
 import org.univaq.swa.framework.model.Aula;
+import org.univaq.swa.framework.security.Logged;
 import org.univaq.swa.template.exceptions.RESTWebApplicationException;
 
 
@@ -32,7 +37,6 @@ import org.univaq.swa.template.exceptions.RESTWebApplicationException;
 public class AuleRes {
     
     private static final String DS_NAME = "java:comp/env/jdbc/auleweb";
-    private static final String QUERY_SELECT_EVENTO = "SELECT * FROM aula WHERE id = ?";
     
 
     private static Connection getPooledConnection() throws NamingException, SQLException {
@@ -48,53 +52,63 @@ public class AuleRes {
     @GET
     @Path("{id: [1-9]+}")
     @Produces(MediaType.APPLICATION_JSON)
-    public AulaRes getAula(@PathParam("id") int idAula)throws RESTWebApplicationException {
-        try {
-            Aula aula = null;
-            try (Connection con = getPooledConnection();  PreparedStatement ps = con.prepareStatement(QUERY_SELECT_EVENTO)) {
-               ps.setInt(1, idAula);
-               try (ResultSet rs = ps.executeQuery()){
-                   if (rs.next()){
-                       aula = obtainAula(rs);
-                   }
-               }
-            }
-        return new AulaRes(aula);
-        } catch (SQLException ex) {
-            ex.printStackTrace();
-            return null;
-        } catch (NamingException ex) {
-            ex.printStackTrace();
-            return null;
-        }
+    public Response getAula(@PathParam("id") int idAula)throws RESTWebApplicationException {
+        Aula aula = new Aula();
+        aula.setId(idAula);
+        AulaRes aulaRes = new AulaRes(aula);
+        
+        return aulaRes.getInfoAula(idAula);
     }
     
-    private Aula obtainAula(ResultSet rs) {
-        try {
-            Aula a = new Aula();
-
-            a.setId(rs.getInt("id"));
-            a.setNome(rs.getString("nome"));
-            a.setLuogo(rs.getString("luogo"));
-            a.setPiano(rs.getString("piano"));
-            a.setCapienza(rs.getInt("capienza"));
-            a.setEmailResponabile(rs.getString("email_responsabile"));
-            a.setPreseElettriche(rs.getInt("prese_elettriche"));
-            a.setPreseRete(rs.getInt("prese_rete"));
-            a.setNote(rs.getString("note"));
-            return a;
-        } catch (SQLException e) {
-            e.printStackTrace();
-            return null;
-        }
+    @POST
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)
+    @Path("{id: [1-9]+}")
+    public Response assignGruppo(@Context UriInfo uriinfo, @PathParam("id") int idAula, HashMap<String,Object> gruppo)throws RESTWebApplicationException {
+        Aula aula = new Aula();
+        aula.setId(idAula);
+        AulaRes aulaRes = new AulaRes(aula);
+        
+        return aulaRes.assignGruppoAula(uriinfo,idAula,gruppo);
     }
     
     // 3
     @POST
-    @Consumes("application/json")
+    @Logged
+    @Consumes(MediaType.APPLICATION_JSON)
     @Produces(MediaType.APPLICATION_JSON)
-    public Response addAula(Aula payload){
-        return Response.ok().build();
+    public Response addAula(@Context UriInfo uriinfo, HashMap<String, Object> evento){
+        String addAulaQuery = "INSERT INTO `aula` (`nome`, `luogo`, `edificio`, `piano`, `capienza`, `email_responsabile`, `prese_elettriche`, `prese_rete`, `note`) VALUES (?,?, ?, ?, ?, ?, ?, ?, ?)";
+        try ( Connection con = getPooledConnection(); PreparedStatement ps = con.prepareStatement(addAulaQuery, Statement.RETURN_GENERATED_KEYS)) {
+            ps.setString(1, (String) evento.get("nome"));
+            ps.setString(2, (String) evento.get("luogo"));
+            ps.setString(3, (String) evento.get("edificio"));
+            ps.setString(4, (String) evento.get("piano"));
+            ps.setInt(5, (int) evento.get("capienza"));
+            ps.setString(6, (String) evento.get("email_responsabile"));
+            ps.setInt(7, (int) evento.get("prese_elettriche"));
+            ps.setInt(8, (int) evento.get("prese_rete"));
+            ps.setString(9, (String) evento.get("note"));
+            
+            ps.executeUpdate();
+            
+            try ( ResultSet keys = ps.getGeneratedKeys()) {
+                keys.next();
+                int id = keys.getInt(1);
+                URI uri = uriinfo.getBaseUriBuilder()
+                        .path(AuleRes.class)
+                        .path(AuleRes.class, "getAula")
+                        .build(id);
+                return Response.created(uri).build();
+            }
+        }
+        catch (SQLException ex) {
+            ex.printStackTrace();
+        }
+        catch(NamingException ex){
+            ex.printStackTrace();
+        }
+        return null;
     }
     
     // 2
